# meta-ads-scraper

./: .env.example  .gitattributes  .gitignore  APPROACH.md  BUILD-PLAN.md  CHANGELOG.md  PLANNING-BRIEF.md  README.md  bootstrap.sh  pyproject.toml
.github/workflows/: ci.yml
.project/: ENGINEERING-MANUAL.md
.project/journal/: JOURNAL.md
.project/patterns/playwright-scraping/: README.md
.project/patterns/pydantic-models/: README.md
.project/patterns/pytest-patterns/: README.md
docs/architecture/: 01-overview.md  02-architecture.md  03-data-model.md  04-scraping-strategy.md  05-anti-detection.md  06-pagination.md  07-retry-policy.md  08-cli-design.md  09-output-formats.md  10-testing-strategy.md  11-deployment-and-running.md
docs/contracts/: ad-data-schema.md
docs/conventions/: CODE-STYLE.md  COMMIT-FORMAT.md  TESTING.md
examples/: README.md  automotive_demo.json  dental_demo.json  jewelry_demo.json  keyword_shoes.json  page_slug_nike.csv  stress_test_500ads.json
scripts/: capture_html.py  capture_page.py  capture_pagination_har.py  slim_fixture.py  slim_har.py
src/meta_ads_scraper/: __init__.py  checkpoint.py  cli.py  constants.py  exceptions.py  logging_config.py  models.py  pagination.py  rate_limit.py  retry.py  url_resolver.py
src/meta_ads_scraper/exporters/: __init__.py  csv_exporter.py  json_exporter.py
src/meta_ads_scraper/parsers/: __init__.py  ad_card.py
src/meta_ads_scraper/scraper/: __init__.py  base.py  playwright_scraper.py
tests/: conftest.py
tests/fixtures/html/: keyword_search_shoes.html
tests/integration/: test_pagination_har_replay.py  test_parser_offline.py  test_playwright_scraper_mvp.py  test_smoke.py
tests/unit/: test_checkpoint.py  test_cli.py  test_exporters.py  test_logging.py  test_models.py  test_package.py  test_pagination.py  test_rate_limit.py  test_retry.py  test_url_resolver.py
