[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-ads-scraper"
version = "0.1.0"
description = "A Python scraper for Meta's Ad Library — keyword, page URL, and page slug search."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Samuel Muriuki", email = "sammkimberly@gmail.com" }
]
keywords = ["meta", "facebook", "ads", "scraper", "playwright", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

dependencies = [
    "playwright>=1.45,<2.0",
    "playwright-stealth>=2.0,<3.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "httpx>=0.27,<1.0",
    "typer>=0.12,<1.0",
    "rich>=13.7,<14.0",
    "tenacity>=8.5,<10.0",
    "structlog>=24.1,<26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<7.0",
    "pytest-playwright>=0.5,<1.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "types-requests",
]

[project.scripts]
meta-ads-scraper = "meta_ads_scraper.cli:app"

[project.urls]
Repository = "https://github.com/Samuel-Muriuki/meta-ads-scraper"
Issues = "https://github.com/Samuel-Muriuki/meta-ads-scraper/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv", "data", "examples"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle, pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "ASYNC",            # async-correctness
    "S",                # bandit (security)
    "ANN",              # type annotations
    "RUF",              # ruff-specific
]
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "S101",    # assert used (fine in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

# playwright and tenacity ship `py.typed`, so their stubs work without an
# override. playwright-stealth does NOT ship `py.typed`, so we keep the
# override scoped narrowly to that one module.
[[tool.mypy.overrides]]
module = ["playwright_stealth.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live_test: requires real Meta access (gated by META_LIVE_TESTS=1)",
    "slow: deselected by default (enable with --runslow)",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/meta_ads_scraper",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
branch = true
source = ["src/meta_ads_scraper"]
omit = [
    "src/meta_ads_scraper/__main__.py",
]

[tool.coverage.report]
fail_under = 78
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
